third attempt to fix bugs on mobile

--- a/cssFiles/style.css
+++ b/cssFiles/style.css
@@ -106,18 +106,56 @@ html{
     html{
         font-size: 50%;
     }
+    .wrapper{
+        width: 100vw;
+    }
+    .header{
+        justify-content: space-around;
+    }
+    .threeButtons{
+        justify-content: space-around;
+    }
+    .threeButtons img{
+        width: 100%;
+        height: auto;
+    }
 }
 
 @media(max-width:380px){
     html{
         font-size: 40%;
     }
-
+    .wrapper{
+        width: 100vw;
+    }
+    .header{
+        justify-content: space-around;
+    }
+    .threeButtons{
+        justify-content: space-around;
+    }
+    .threeButtons img{
+        width: 100%;
+        height: auto;
+    }
 }
 
 @media(max-width:300px){
     html{
         font-size: 30%;
+    }
+    .wrapper{
+        width: 100vw;
+    }
+    .header{
+        justify-content: space-around;
+    }
+    .threeButtons{
+        justify-content: space-around;
+    }
+    .threeButtons img{
+        width: 100%;
+        height: auto;
     }
 }
 
@@ -125,5 +163,17 @@ html{
     html{
         font-size: 25%;
     }
-
+    .wrapper{
+        width: 100vw;
+    }
+    .header{
+        justify-content: space-around;
+    }
+    .threeButtons{
+        justify-content: space-around;
+    }
+    .threeButtons img{
+        width: 100%;
+        height: auto;
+    }
 }
